fix(styling): Fix overlapping text

--- a/root/frontend/react-src/src/home/Home.module.scss
+++ b/root/frontend/react-src/src/home/Home.module.scss
@@ -1,1 +1,5 @@
 @import '../styles/shared';
+
+a {
+    display: block;
+}
